src/objects/Demand_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Agreement Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_Owner_Email__c</fullName>
        <label>Booking Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Current_Demand_Installment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Demand (Installment)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Demand_Service_Tax_Basic__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Demand Service Tax(Basic)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Demand_Service_Tax_KKC__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Demand Service Tax(KKC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Demand_Service_Tax_SBC__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Demand Service Tax(SBC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Demand_Service_Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Demand (Service Tax)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Demand Invoices</relationshipLabel>
        <relationshipName>Demand_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Day_0_ServiceTax_Amount__c</fullName>
        <label>Day 0 ServiceTax Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_0_demand_generation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Day 0 demand generation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Return_Date__c</fullName>
        <label>Delivery/ Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_status__c</fullName>
        <label>Delivery status</label>
        <picklist>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Demand_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demand Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demand_Number__c</fullName>
        <formula>(Project__r.RDS_Short_Name__c) &amp; &apos;/&apos; &amp; Left( Customer__r.Project_Unit__r.TowerName__r.Name ,2) &amp; &apos;-&apos; &amp; Customer__r.Project_Unit__r.Name &amp; &apos;/&apos; &amp; TEXT( Invoice_Date__c ) &amp; &apos;/&apos; &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Demand Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatch_date__c</fullName>
        <label>Dispatch date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Future_Correspondence_Email__c</fullName>
        <label>Future Correspondence Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Interest_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>Date on which Demand was raised</description>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Advanced_Demand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Advanced Demand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Printed__c</fullName>
        <formula>!(ISBLANK(PO_no__c))  &amp;&amp;  !(ISBLANK(Dispatch_date__c))</formula>
        <label>Is Printed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Charges_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Legal Charges Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Charges_Service_Tax_Basic__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Legal Charges Service Tax(Basic)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Charges_Service_Tax_KKC__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Legal Charges Service Tax(KKC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Charges_Service_Tax_SBC__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Legal Charges Service Tax(SBC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Charges_Service_Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Legal Charges Service Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MVAT_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MVAT Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Milestone_Name__c</fullName>
        <label>Milestone Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding_Installment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Outstanding (Installment)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Service_Tax_Basic__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Outstanding Service Tax(Basic)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Service_Tax_KKC__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Outstanding Service Tax(KKC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Service_Tax_SBC__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Outstanding Service Tax(SBC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Service_Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Outstanding (Service Tax)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_no__c</fullName>
        <label>PO no</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Invoice__c</fullName>
        <formula>HYPERLINK(&quot;/apex/DemandLetterTemplate?DemandInvId=&quot;+Id,&quot;Click Here&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Invoice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Construction_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Construction Stages</label>
        <referenceTo>Project_Construction_Stages__c</referenceTo>
        <relationshipLabel>Demand Invoices</relationshipLabel>
        <relationshipName>Demand_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Demand Invoices</relationshipLabel>
        <relationshipName>Demand_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ready_Reckoner_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ready Reckoner Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_failure__c</fullName>
        <label>Reason for failure</label>
        <picklist>
            <controllingField>Delivery_status__c</controllingField>
            <picklistValues>
                <fullName>Wrong Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Person Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-existing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Accepted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registration_Charges_Amount__c</fullName>
        <label>Registration Charges Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Demand_Generation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registration Demand Generation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Service Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Tax_on_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest (ServiceTax)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stamp__c</fullName>
        <label>Stamp Duty Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Customer_Pay_Plan_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the payment mile stone record</description>
        <label>Standard Customer Pay Plan Detail</label>
        <referenceTo>Standard_Customer_Pay_Plan_Detail__c</referenceTo>
        <relationshipLabel>Demand Invoices</relationshipLabel>
        <relationshipName>Demand_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TDSAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TDSAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TDS_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TDS Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Demanded_Installment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Demanded (Installment)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Demanded_Service_Tax_Basic__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Demanded Service Tax(Basic)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Demanded_Service_Tax_KKC__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Demanded Service Tax(KKC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Demanded_Service_Tax_SBC__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Demanded Service Tax(SBC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Demanded_Service_Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Demanded (Service Tax)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Payable_Installment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Payable (Installment)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Payable_Overall__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Payable (Overall)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Payable_Service_Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Payable (Service Tax)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Recd_Installment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Recd (Installment)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Recd_Service_Tax_Basic__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Recd Service Tax(Basic)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Recd_Service_Tax_KKC__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Recd Service Tax(KKC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Recd_Service_Tax_SBC__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Recd Service Tax(SBC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Recd_Service_Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Recd (Service Tax)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc1_Email__c</fullName>
        <label>cc1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>cc2_Email__c</fullName>
        <label>cc2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>cc3_email__c</fullName>
        <label>cc3 email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>gst__c</fullName>
        <defaultValue>true</defaultValue>
        <label>gst</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_delivered__c</fullName>
        <formula>!(ISBLANK( Dispatch_date__c ))  &amp;&amp;  ISPICKVAL( Delivery_status__c , &quot;Delivered&quot;) &amp;&amp; 
!(ISBLANK(PO_no__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is delivered</label>
        <type>Checkbox</type>
    </fields>
    <label>Demand Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Day_0_demand_generation__c</columns>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Customer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Total_Amount__c</columns>
        <columns>Project_Construction_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Current_Demand_Installment__c</columns>
        <columns>Current_Demand_Service_Tax__c</columns>
        <columns>Agreement_Value__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Outstanding_Service_Tax__c</columns>
        <columns>Service_Tax_Rate__c</columns>
        <columns>Invoice_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Demand Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demand Invoices</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>